# hex-map

./: .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.dev.frontend  Dockerfile.frontend  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: map.html
client/: package-lock.json  package.json  tsconfig.json
client/src/: App.tsx  index.css  index.tsx
client/src/api/: coords.ts  map.ts
client/src/components/: HexMap.css  HexMap.tsx  StatusBar.css  StatusBar.tsx
